# cpp20-advanced-programming

./: .clang-format  CMakeLists.txt  Makefile  conanfile.txt  main
.github/workflows/: cmake.yml
cmake/: gtest.cmake  json.cmake  spdlog.cmake  yaml-cpp.cmake
data/text/: random.txt
src/: CMakeLists.txt
src/async/: CMakeLists.txt  README.md  demo.cpp  future_join.cpp  simple_future.hpp  socket_future.cpp  socket_future.hpp  socket_future_test.cpp
src/base/: CMakeLists.txt  ad_hoc.cpp  auto-ptr.cpp  demo.cpp  enum-type-convert.cpp  file-io-example.cpp  like-rust-result.cpp  product-type.cpp  test-logger.cpp  thread_pool_test.cpp
src/coroutine/: 00_demo.cpp  01_generator.cpp  02_coroutine_generator.cpp  03_simple_io_task.cpp  0x0_co_await.cpp  CMakeLists.txt
src/factory/: CMakeLists.txt  factory.hpp  main.cpp
src/factory/base-oo/: CMakeLists.txt  factory.hpp  main.cpp
src/factory/base-oo/strategy/: base.hpp  call_phone.cpp  call_phone.hpp  call_smoke.hpp  maybe_throw_strategy.cpp  maybe_throw_strategy.hpp  mod.hpp
src/factory/base-template/: CMakeLists.txt  factory.hpp  main.cpp
src/factory/base-template/strategy/: call_phone.cpp  call_phone.hpp  call_smoke.hpp  maybe_throw_strategy.cpp
src/factory/strategy/: base.hpp  call_phone.hpp  call_smoke.cpp  call_smoke.hpp  maybe_throw_strategy.hpp  mod.hpp
src/helper/: CMakeLists.txt  buffer.hpp  common.hpp  excepted.hpp  excepted_test.cpp  logger.hpp  logger.hpp.bak  logger.hpp.static  monad.hpp  thread_pool.hpp  thread_pool_test.cpp  timer.hpp  type_trait_extends.hpp
src/monad/: CMakeLists.txt  for-excepted.cpp  for-future-folly.cpp  for-future.cpp  mbind.cpp
src/qa/: CMakeLists.txt  how-use-member-pointer.cpp  how_fix_bind_forward_move_only.cpp  placement_new.cpp  test.cpp
src/range-/: CMakeLists.txt  base.cpp
src/reflection/: CMakeLists.txt  main.cpp  util.hpp
src/serialize-deserialize/: CMakeLists.txt  json-.cpp  json2-.cpp  json3-.cpp  json4-.cpp  marco_helper.hxx  yaml-.cpp
src/some-test/: CMakeLists.txt  main.cpp  some.cpp  some.hpp
src/stl/: CMakeLists.txt  multi-param.cpp
src/template/: CMakeLists.txt  basic.cpp  fibonacci.cpp  parameter-constraints.cpp  test-index_sequence.cpp  typelist.cpp
src/template/concept-/: base.cpp
src/template/singular-recursive-template/: sample-shared_ptr.cpp  visitor-pattern.cpp
